<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UnicornActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:srcCompat="@drawable/uni"
            tools:srcCompat="@drawable/uni" />

        <TextView
            android:id="@+id/tUnicorn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strPantasy" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:srcCompat="@drawable/uni4"
            tools:srcCompat="@drawable/uni4" />

        <TextView
            android:id="@+id/tUnicorn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strAlopigus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:srcCompat="@drawable/uni2"
            tools:srcCompat="@drawable/uni2" />

        <TextView
            android:id="@+id/tUnicorn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strDarnasus" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:srcCompat="@drawable/uni3"
            tools:srcCompat="@drawable/uni3" />

        <TextView
            android:id="@+id/tUnicorn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strMercromina" />
    </LinearLayout>
</LinearLayout>